fix small mis-alignment

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -262,8 +262,6 @@ $offset-top: 50px
             padding: 0
             grid-template-rows: 40px 50vh minmax(auto, 100px) 40px 40px 40px
             grid-template-columns: repeat(12, 1fr)
-            // grid-gap: 10px
-            padding: 16px
             .img-container
                 height: 100%
                 grid-row: 2
